# zidian

./: .gitignore  CMakeLists.txt  README.md
application/: main.cpp  test1.cpp  test_base1.cpp
assets/: test.txt
assets/zidian_shader/glsl/: draw_point.vert
assets/zidian_shader/opengl/: draw_point.frag  draw_point.vert
assets/zidian_shader/slang/: draw_triangle.slang
assets/zidian_shader/spirv/: draw_triangle.spirv
zidian/: CMakeLists.txt
zidian/include/: config.h  sand_box.h  zidian.h
zidian/include/audio/: audio_manager.h
zidian/include/constants/: types.h
zidian/include/input/: input_common.h  input_manager.h
zidian/include/render/: backend_enum.h  command_queue.h  irender.h  paint.h  render2d.h  render_res_manager.h
zidian/include/render/backend/opengl/: glheader.h  graph_memory.h  opengl_impl.h  shader.h  shader_constants.h
zidian/include/render/backend/opengl/command/: cmd_base_opengl.h  cmd_clear.h  cmd_draw_point.h  cmd_set_clear_color.h
zidian/include/render/backend/opengl/glad/: glad.h
zidian/include/render/backend/vulkan/: vulkan_impl.h
zidian/include/render/batch/: batch_base.h  batch_draw_points.h  ibatch_draw.h  ibatch_draw_points.h
zidian/include/render/command/: cmd.h  cmd_clear.h  cmd_draw_point.h  cmd_set_clear_color.h  command_pool.h  types.h
zidian/include/resource/: asset_manager.h
zidian/include/utils/: color.h  json.h  log.h  time.h
zidian/include/widget/: app.h  random.h
zidian/lib/windows_msvc/: glfw3.lib
zidian/src/: sand_box.cpp  zidian.cpp
zidian/src/audio/: audio_manager.cpp
zidian/src/input/: input_manager.cpp
zidian/src/render/: command_queue.cpp  irender.cpp  paint.cpp  render2d.cpp  render_res_manager.cpp
zidian/src/render/backend/opengl/: glad.cpp  graph_memory.cpp  opengl_impl.cpp  shader.cpp  shader_constants.cpp
zidian/src/render/backend/opengl/command/: cmd_base_opengl.cpp  cmd_clear.cpp  cmd_draw_point.cpp  cmd_set_clear_color.cpp
zidian/src/render/backend/vulkan/: vulkan_impl.cpp
zidian/src/render/batch/: batch_base.cpp  batch_draw_points.cpp
zidian/src/render/command/: cmd.cpp  cmd_clear.cpp  cmd_draw_point.cpp  cmd_set_clear_color.cpp  command_pool.cpp  types.cpp
zidian/src/resource/: asset_manager.cpp
zidian/src/utils/: color.cpp  log.cpp  time.cpp
